--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "morpho.com.pluralsight"
+        applicationId "georgia.com.Notekeeper"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
