--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
 
     implementation 'com.android.support:design:27.1.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.2.2'
 
 }
