--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 apply plugin: 'com.android.application'
 
 android {
@@ -9,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //VectorDrawables.useSupportLibrary  = true
+
+       /* defaultConfig{
+            vectorDrawables.useSupportLibrary = true
+        }*/
     }
     buildTypes {
         release {
