--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+       /* ext.kotlin_version = '1.2.41'
+        ext.nav_version = '1.0.0-alpha01'*/
         
     }
     dependencies {
@@ -11,6 +13,11 @@ buildscript {
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha16'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
+
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01"
+
     }
 }
 
