--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name=".NotekeeperProvider"
+            android:authorities="com.jwhh.jim.notekeeper.provider"
+            android:enabled="true"
+            android:exported="true"></provider>
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
