--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     // androidTestImplementation ' androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+
     implementation 'androidx.annotation:annotation:1.0.2'
 
     // androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
