--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".NoteServiceBackup"
+            android:exported="false"></service>
+
         <provider
             android:name=".NotekeeperProvider"
             android:authorities="com.jwhh.jim.notekeeper.provider"
